-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0, 5.6, 5.7
Testing declarative_ui FAIL! : declarative_ui::Map Items::test_ab_drag() 'verify()' returned FALSE. () Loc: [/work/build/qt/qtlocation/tests/auto/declarative_ui/tst_map_item.qml(375)] FAIL! : declarative_ui::Map Item 2::test_yz_dateline() 'verify()' returned FALSE. () Loc: [/work/build/qt/qtlocation/tests/auto/declarative_ui/tst_map_item_details.qml(463)] FAIL! : declarative_ui::Map pinch::test_pinch_zoom() A value is required for tryCompare Loc: [/work/build/qt/qtlocation/tests/auto/declarative_ui/tst_map_pinch_and_flick.qml(787)] Totals: 65 passed, 3 failed, 0 skipped
- is duplicated by
-
QTBUG-53455 qtlocation/Windows: Autotest qtlocation\tests\auto\declarative_ui fails/is flaky
-
- Closed
-
- relates to
-
QTBUG-23412 QtLocation & QtPositioning backlog
-
- In Progress
-