examples/location/mapviewer/content/map/Marker.qml
@@ -67,6 +67,7 @@ MapQuickItem {
             anchors.fill: parent
             hoverEnabled : false
             drag.target: marker
+            preventStealing: true
 
             onPressed : {
                 map.pressX = mouse.x
